--- a/frontend/src/app/pages/account/account.component.scss
+++ b/frontend/src/app/pages/account/account.component.scss
@@ -92,7 +92,7 @@
            padding-left: 200px;
            align-items: center;
            &_buttons  {
-               width: 150px;
+               width: 300px;
                display: flex;
                justify-content: space-between;
            }
@@ -102,7 +102,6 @@
     .main {
         display: grid;
         grid-template-columns: 1fr 4fr;
-        // min-height: 500px;
         margin: 30px 20px 40px 20px;
         grid-gap:  0px 30px;
         
@@ -113,15 +112,14 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
+            width: 100%;
             &_title {
-                flex-grow: 1;
                 color: $title-color;
                 @include card_title;
             }
 
-            &_params  {
+            &_params, &_password {
                 align-self: center;
-                flex-grow: 2;
 
                 .helper-password {
                     color: transparent;
@@ -133,8 +131,30 @@
 
             &_submit {
                 align-self: center;
+                margin-bottom: 30px
             }
-        }
+
+            .password_submit {
+                align-self: center;
+            }
+
+            .main-about-container {
+                width: 100%;
+                .description {
+                    overflow: auto;
+                    .mat-form-field {
+                        width: 100%;
+                    }
+                }
+                .interest {
+                    width: 100%;
+                    .mat-form-field {
+                        width: 100%;
+                    }
+                }
+            }
+        };
+        
    };
 
     // @media screen and (max-width: 1199px) {
