--- a/frontend/src/app/pages/account/account.component.html
+++ b/frontend/src/app/pages/account/account.component.html
@@ -105,39 +105,34 @@
         </p>
 
         <p class="interest">
-
           <mat-form-field class="example-chip-list">
-            <mat-label>Favorite Fruits</mat-label>
-            <mat-chip-list #chipList aria-label="Fruit selection">
+            <mat-label>Interest</mat-label>
+            <mat-chip-list #chipList aria-label="Interest selection">
               <mat-chip
-                *ngFor="let fruit of fruits"
+                *ngFor="let interest of choicedInterests"
                 [selectable]="selectable"
                 [removable]="removable"
-                (removed)="remove(fruit)">
-                {{fruit}}
+                (removed)="removeInterest(interest)">
+                {{interest}}
                 <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
               </mat-chip>
               <input
-                placeholder="New fruit..."
-                #fruitInput
-                [formControl]="fruitCtrl"
+                placeholder="New Interest..."
+                #interestInput
+                [formControl]="interestsForm"
                 [matAutocomplete]="auto"
                 [matChipInputFor]="chipList"
                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                (matChipInputTokenEnd)="add($event)">
+                >
             </mat-chip-list>
-            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-              <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
-                {{fruit}}
+            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedInterest($event)">
+              <mat-option *ngFor="let interest of filteredInterests | async" [value]="interest">
+                {{interest}}
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-
         </p>
-
       </div>
-
-
 
 
       <button mat-raised-button color="primary" class="main-profile_submit">Accent about</button>
