--- a/frontend/src/app/pages/account/account.component.html
+++ b/frontend/src/app/pages/account/account.component.html
@@ -63,7 +63,6 @@
         Accent main
       </button>
 
-
       <div [formGroup]="passwordForm" class="main-profile_password">
         <p>
 					<mat-form-field class="example-full-width">
@@ -87,14 +86,14 @@
         class="password_submit">
         Change password
       </button>
-
     </div>
 
     <div class="main-about">
       <h3 class="main-profile_title">About me</h3>
 
       <div class="main-about-container">
-        <p class="user-status">
+
+        <div class="user-status">
           <label id="example-radio-group-label">Pick your status</label>
           <mat-radio-group
             aria-labelledby="example-radio-group-label"
@@ -104,33 +103,89 @@
               {{status}}
             </mat-radio-button>
           </mat-radio-group>
-        </p>
+        </div>
 
-        <p class="user-birth">
+        <mat-divider></mat-divider>
+        
+        <div class="user-birth">
           <mat-form-field appearance="fill">
             <mat-label>Date of birth</mat-label>
-            <input readonly matInput [max]="minSearchDate" [matDatepicker]="dateOfBirthPiker" [(ngModel)]="dateOfBirth">
+            <input readonly matInput [max]="minSearchDate"
+              [matDatepicker]="dateOfBirthPiker"
+              [(ngModel)]="dateOfBirth"
+              >
             <mat-datepicker-toggle matSuffix [for]="dateOfBirthPiker"></mat-datepicker-toggle>
             <mat-datepicker #dateOfBirthPiker startView="year" [startAt]="startDate"></mat-datepicker>
           </mat-form-field>
-          <span class="user-old">{{dateOfBirth}}</span>
-        </p>
+          <span class="user-old">{{dateOfBirth | userYearsOld}}</span>
+        </div>
 
-        <p class="description">
+        <mat-divider></mat-divider>
+
+        <div class="languages">
+          <h4 class="languages-title">Languages</h4>
+
+          <div class="languages-new">
+
+            <button mat-mini-fab
+              color="accent"
+              class="languages-new_btn"
+              [disabled]="!languageName"
+              aria-label="Example icon button with a plus one icon"
+              (click)="addNewUserLanguage($event)">
+              <mat-icon>plus_one</mat-icon>
+            </button>
+
+            <mat-form-field>
+              <mat-label>Language</mat-label>
+              <input matInput [(ngModel)]="languageName">
+            </mat-form-field>
+
+            <mat-radio-group
+              aria-labelledby="example-radio-group-label"
+              class="lvl-radio-group"
+              [(ngModel)]="choicesLvlOfLang">
+              <mat-radio-button 
+                class="example-radio-button" 
+                *ngFor="let lvl of lvlOfKnowledgeLanguage"
+                [value]="lvl">
+                  {{lvl}}
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
+
+          <div class="languages-list">
+            <mat-list role="list">
+              <mat-list-item role="listitem" *ngFor="let lang of userLanguageKnowledge;let j = index">{{lang.name + ' : ' +  lvlOfKnowledgeLanguage[lang.lvl]}}
+                <button mat-mini-fab
+                color="warn"
+                (click)="deleteCurrentLang(j)"
+                aria-label="Example icon button with a filter list icon"
+                class="delete-item">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </mat-list-item>
+            </mat-list>
+          </div>
+        </div>
+
+        <mat-divider></mat-divider>
+
+        <div class="description">
           <mat-form-field class="example-full-width">
             <mat-label>Description</mat-label>
             <textarea cdkTextareaAutosize
             cdkAutosizeMinRows="5"
-            cdkAutosizeMaxRows="40" matInput placeholder="About you"></textarea>
+            cdkAutosizeMaxRows="40" matInput placeholder="About me"></textarea>
           </mat-form-field>
-        </p>
+        </div>
 
-        <p class="interest">
+        <div class="interest">
           <mat-form-field class="example-chip-list">
             <mat-label>My interests</mat-label>
-            <mat-chip-list #chipList aria-label="Interest selection">
+            <mat-chip-list #chipListOfInterests aria-label="Interest selection">
               <mat-chip
-                *ngFor="let interest of choicedInterests"
+                *ngFor="let interest of choicesInterests"
                 [selectable]="selectable"
                 [removable]="removable"
                 color="accent"
@@ -143,19 +198,103 @@
                 #interestInput
                 [formControl]="interestsForm"
                 [matAutocomplete]="auto"
-                [matChipInputFor]="chipList"
-                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                >
+                [matChipInputFor]="chipListOfInterests"
+                [matChipInputSeparatorKeyCodes]="separatorKeysCodes">
             </mat-chip-list>
             <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedInterest($event)">
-              <mat-option *ngFor="let interest of filteredInterests | async" [value]="interest">
+              <mat-option *ngFor="let interest of filtredInterests" [value]="interest">
                 {{interest}}
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-        </p>
-      </div>
+        </div>
 
+        <div class="skills">
+          <h4 class="skills-title">My skills</h4>
+          <div class="skills-new">
+
+              <button mat-mini-fab
+                color="accent"
+                class="skills-new_btn"
+                [disabled]="skillsForm.invalid"
+                aria-label="Example icon button with a plus one icon"
+                (click)="addNewUserSkill($event)">
+                <mat-icon>plus_one</mat-icon>
+              </button>
+
+              <mat-form-field class="example-full-width">
+                <mat-label>Choose skills</mat-label>
+                <input type="text"
+                      aria-label="skills"
+                      matInput
+                      #skillInput
+                      [formControl]="skillsForm"
+                      [matAutocomplete]="skillsAuto">
+                <mat-autocomplete #skillsAuto="matAutocomplete">
+                  <mat-option *ngFor="let skill of filtredSkills" [value]="skill">
+                    {{skill}}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+    
+              <mat-radio-group
+                aria-labelledby="example-radio-group-label"
+                class="lvl-radio-group"
+                [(ngModel)]="choicesLvlOfSkill">
+                <mat-radio-button 
+                  class="example-radio-button" 
+                  *ngFor="let lvl of lvlOfKnowledgeSkill;let i = index"
+                  [value]="lvl">
+                    {{lvl}}
+                </mat-radio-button>
+              </mat-radio-group>
+
+          </div>
+
+          <div class="skills-list">
+            <ng-container *ngFor="let skillCategory of choicesSkills">
+              <div class="skills-list_category" *ngIf="skillCategory.list.length > 0">
+                <span class="category-title">{{skillCategory.name + ' :'}}</span>
+                <mat-list role="list" class="list-item">
+                  <mat-list-item role="listitem" *ngFor="let skillName of skillCategory.list;let j = index">
+                    {{skillName}}
+                    <button mat-mini-fab
+                    color="warn"
+                    (click)="deleteCurrentSkill(skillCategory.name, j)"
+                    aria-label="Example icon button with a filter list icon"
+                    class="delete-item">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </mat-list-item>
+                </mat-list>
+              </div>
+            </ng-container>
+          </div>
+
+          <div class="skills-more">
+            <mat-form-field class="example-full-width">
+              <mat-label>More details about your skills</mat-label>
+              <textarea cdkTextareaAutosize
+              cdkAutosizeMinRows="5"
+              cdkAutosizeMaxRows="40" matInput placeholder="More information"></textarea>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="more">
+          <h4 class="more-title">Some more information</h4>
+          <mat-list role="list" class="list-item">
+            <mat-list-item role="listitem" *ngFor="let info of moreInfo;let j = index">
+              <mat-icon *ngIf="info.status; else elseDescSplit">radio_button_unchecked</mat-icon>
+              <ng-template #elseDescSplit>
+                <mat-icon>check_circle_outline</mat-icon>
+              </ng-template>
+              {{info.name}}
+            </mat-list-item>
+          </mat-list>
+        </div>
+
+      </div>
 
       <button mat-raised-button
         color="primary"
@@ -166,5 +305,5 @@
     </div>
 
   </section>
-  
+
 <!-- </app-account> -->
